--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,7 +8,9 @@
     "paths": {
       "@/*": ["./src/*"],
       "@components/*": ["./src/components/*"],
-      "@utils/*": ["./src/utils/*"]
+      "@utils/*": ["./src/utils/*"],
+      "@view/*":["./src/view/*"],
+      "@store/*":["./src/store/*"]
     },
 
     /* Bundler mode */
