--- a/package.json
+++ b/package.json
@@ -4,31 +4,41 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint ",
     "fix": "eslint . --fix",
     "format": "prettier --write .",
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "prepare": "husky install"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^2.3.18",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/vite": "^4.1.14",
     "@types/node": "^22.15.30",
+    "axios": "^1.12.2",
+    "md-editor-v3": "^6.0.1",
+    "pinia": "^3.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.38.0",
     "@eslint/js": "^9.28.0",
+    "@types/prismjs": "^1.26.5",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-vue": "^10.2.0",
     "globals": "^16.2.0",
     "husky": "^8.0.3",
+    "postcss": "^8.5.6",
     "prettier": "^3.5.3",
+    "tailwindcss": "^4.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.33.1",
     "unplugin-auto-import": "^19.3.0",
