--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,7 +14,9 @@
     "paths": {
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
-      "@utils/*": ["src/utils/*"]
+      "@utils/*": ["src/utils/*"],
+      "@view/*":["src/view/*"],
+      "@store/*":["src/store/*"]
     },
     
 
