--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "deploy": "gh-pages -d dist -f"
   },
   "dependencies": {
     "@kangc/v-md-editor": "^2.3.18",
@@ -34,6 +35,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-vue": "^10.2.0",
+    "gh-pages": "^6.3.0",
     "globals": "^16.2.0",
     "husky": "^8.0.3",
     "postcss": "^8.5.6",
